<resources>
    <string name="app_name">Intent Kotliin</string>
    <string name="move_activity">PINDAH AKTIVITI</string>
    <string name="move_with_data">PINDAH AKTIVITI DENGAN DATA</string>
    <string name="dial_number">PANGGIL TELEPON</string>
    <string name="move_with_result">PINDAH AKTIVITI UNTUK RESULT</string>
    <string name="result_from_activity">HASIL DARI AKTIVITI</string>
    <string name="choose_color">PILIH WARNA YANG KAMU SUKA</string>
    <string name="_green">HIJAU</string>
    <string name="_pink">PINK</string>
    <string name="_blue">BIRU</string>
    <string name="choose">PILIH</string>
    <string name="data_received">DATA DITERIMA</string>
    <string name="this_ismove_activity">INI PINDAH AKTIVITI</string>
    <string name="back">KEMBALI KE HALAMAN UTAMA</string>
</resources>